run_spec(__dirname, ['coffeescript'], {inlineAssignmentsTo: ['control']})
run_spec(__dirname, ['coffeescript'], {inlineAssignmentsTo: []})
