// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`control.coffee 1`] = `
x =
  if a
    b
  else
    c

x = (aaaaaaaaaaaaaaaaaaaaaaaa if bbbbbbbbbbbbbbbbbbbbbbbbbbbbbbbbbbbbbbbbbbbbbbbbb)

x = while a
  b

x = (aaaaaaaaaaaaaaaaaaaaaaaa until bbbbbbbbbbbbbbbbbbbbbbbbbbbbbbbbbbbbbbbbbbbbbb)

x = loop
  c

x = for a in b
  c

x = (aaaaaaaaaaaaaaaaaaa for aaaaaaaaaaaaaaaaaaaaaaa in bbbbbbbbbbbbbbbbbbbbbbbbbb)

x = for aaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaa in bbbbbbbbbbbbbbbbbbbbbbbbbbbbbbbbbb
  c

x: for a in b
  c

a = try
  b
catch e
  f
finally
  g
~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~
x = if a
  b
else
  c

x =
  aaaaaaaaaaaaaaaaaaaaaaaa if bbbbbbbbbbbbbbbbbbbbbbbbbbbbbbbbbbbbbbbbbbbbbbbbb

x = while a
  b

x =
  aaaaaaaaaaaaaaaaaaaaaaaa until bbbbbbbbbbbbbbbbbbbbbbbbbbbbbbbbbbbbbbbbbbbbbb

x = loop
  c

x = for a in b
  c

x =
  aaaaaaaaaaaaaaaaaaa for aaaaaaaaaaaaaaaaaaaaaaa in bbbbbbbbbbbbbbbbbbbbbbbbbb

x = for aaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaa in (
  bbbbbbbbbbbbbbbbbbbbbbbbbbbbbbbbbb
)
  c

x: for a in b
  c

a = try
  b
catch e
  f
finally
  g

`;

exports[`control.coffee 2`] = `
x =
  if a
    b
  else
    c

x = (aaaaaaaaaaaaaaaaaaaaaaaa if bbbbbbbbbbbbbbbbbbbbbbbbbbbbbbbbbbbbbbbbbbbbbbbbb)

x = while a
  b

x = (aaaaaaaaaaaaaaaaaaaaaaaa until bbbbbbbbbbbbbbbbbbbbbbbbbbbbbbbbbbbbbbbbbbbbbb)

x = loop
  c

x = for a in b
  c

x = (aaaaaaaaaaaaaaaaaaa for aaaaaaaaaaaaaaaaaaaaaaa in bbbbbbbbbbbbbbbbbbbbbbbbbb)

x = for aaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaa in bbbbbbbbbbbbbbbbbbbbbbbbbbbbbbbbbb
  c

x: for a in b
  c

a = try
  b
catch e
  f
finally
  g
~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~
x =
  if a
    b
  else
    c

x =
  aaaaaaaaaaaaaaaaaaaaaaaa if bbbbbbbbbbbbbbbbbbbbbbbbbbbbbbbbbbbbbbbbbbbbbbbbb

x =
  while a
    b

x =
  aaaaaaaaaaaaaaaaaaaaaaaa until bbbbbbbbbbbbbbbbbbbbbbbbbbbbbbbbbbbbbbbbbbbbbb

x =
  loop
    c

x =
  for a in b
    c

x =
  aaaaaaaaaaaaaaaaaaa for aaaaaaaaaaaaaaaaaaaaaaa in bbbbbbbbbbbbbbbbbbbbbbbbbb

x =
  for aaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaa in bbbbbbbbbbbbbbbbbbbbbbbbbbbbbbbbbb
    c

x:
  for a in b
    c

a =
  try
    b
  catch e
    f
  finally
    g

`;
